kv-store/proc-macros/build_fail_tests/binary_static_env/require_binary_static_env/test_3.stderr
error: Unexpected item type; could not modify generics.
 --> $DIR/test_3.rs:6:1
  |
6 | const X: u32 = 0;
  | ^^^^^^^^^^^^^^^^^
